// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Map Balloon Animated 1`] = `
.c3 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c3 .farmblocks-icon {
  display: block;
}

.c8 {
  font-family: Lato,sans-serif;
  font-size: 28px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
  text-align: left;
  font-weight: 600;
}

.c9 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: inherit;
}

.c4 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: hidden;
  padding: 0;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 40px;
  width: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: #f1c618;
  -webkit-filter: drop-shadow(0 2px 4px rgba(0,0,0,0.24));
  filter: drop-shadow(0 2px 4px rgba(0,0,0,0.24));
}

.c5 {
  -webkit-transition: -webkit-transform 0.3s,opacity 0.3s,color 0.3s;
  -webkit-transition: transform 0.3s,opacity 0.3s,color 0.3s;
  transition: transform 0.3s,opacity 0.3s,color 0.3s;
  position: absolute;
  bottom: 48px;
  left: -33px;
  -webkit-transform-origin: bottom left;
  -ms-transform-origin: bottom left;
  transform-origin: bottom left;
  height: 260px;
  width: 260px;
  padding: 0;
  border-radius: 8px;
  border: none;
  box-shadow: 0 2px 16px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5.fade-enter,
.c5.fade-exit-active {
  -webkit-transform: scale(0.5) rotate(5deg);
  -ms-transform: scale(0.5) rotate(5deg);
  transform: scale(0.5) rotate(5deg);
  opacity: 0;
}

.c5.fade-enter-active,
.c5.fade-enter-done {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  opacity: 1;
}

.c5 .caption {
  margin: 16px 8px;
}

.c10 {
  padding-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-image: url(https://picsum.photos/640?image=0);
  background-size: cover;
  background-position: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c7 {
  height: 147px;
  box-sizing: border-box;
  background: linear-gradient( 180deg,rgba(0,0,0,0) 0%,rgba(0,0,0,0.48) 100% );
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 24px;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="c2 pin open"
    >
      <span
        className="c3"
        color="currentColor"
        size="1em"
      >
        <svg
          aria-hidden={true}
          className="farmblocks-icon "
          height="1em"
          viewBox="4 4 32 32"
          width="1em"
        >
          <path
            d="M20.764 34.75a1 1 0 01-.661.25h-.206a1 1 0 01-.661-.25 12.922 12.922 0 01-.418-.391 26.22 26.22 0 01-1.048-1.083 32.885 32.885 0 01-3.155-4.038C11.735 24.896 10 20.11 10 15.02 10 9.167 14.266 5 19.897 5h.206C25.733 5 30 9.167 30 15.02c0 5.09-1.734 9.876-4.615 14.218a32.885 32.885 0 01-3.155 4.038c-.378.413-.73.774-1.048 1.083-.194.188-.336.32-.418.391zM24 16a4 4 0 10-8 0 4 4 0 008 0z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </svg>
      </span>
    </div>
    <div
      className="c4 c5 balloon"
      overflow="hidden"
      width="100%"
    >
      <div
        className="c6 imageSet"
      >
        <div
          className="c7 gradient"
        >
          <div
            className="c8 text"
            fontWeight="title"
            size={28}
            type="white"
          >
            Romaine Lettuce
          </div>
        </div>
      </div>
      <div
        className="c9 c10 caption"
        fontWeight="inherit"
        size={18}
        title={true}
        type="#59636f"
      >
        Paloma Orchards
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Balloon Custom opacity 1`] = `
.c3 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c3 .farmblocks-icon {
  display: block;
}

.c8 {
  font-family: Lato,sans-serif;
  font-size: 28px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
  text-align: left;
  font-weight: 600;
}

.c9 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: inherit;
}

.c4 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: hidden;
  padding: 0;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 0.5;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 40px;
  width: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: #f1c618;
  -webkit-filter: drop-shadow(0 2px 4px rgba(0,0,0,0.24));
  filter: drop-shadow(0 2px 4px rgba(0,0,0,0.24));
}

.c5 {
  position: absolute;
  bottom: 48px;
  left: -33px;
  -webkit-transform-origin: bottom left;
  -ms-transform-origin: bottom left;
  transform-origin: bottom left;
  height: 260px;
  width: 260px;
  padding: 0;
  border-radius: 8px;
  border: none;
  box-shadow: 0 2px 16px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5 .caption {
  margin: 16px 8px;
}

.c10 {
  padding-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-image: url(https://picsum.photos/640?image=0);
  background-size: cover;
  background-position: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c7 {
  height: 147px;
  box-sizing: border-box;
  background: linear-gradient( 180deg,rgba(0,0,0,0) 0%,rgba(0,0,0,0.48) 100% );
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 24px;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={0.5}
    x={400}
    y={400}
  >
    <div
      className="c2 pin open"
    >
      <span
        className="c3"
        color="currentColor"
        size="1em"
      >
        <svg
          aria-hidden={true}
          className="farmblocks-icon "
          height="1em"
          viewBox="4 4 32 32"
          width="1em"
        >
          <path
            d="M20.764 34.75a1 1 0 01-.661.25h-.206a1 1 0 01-.661-.25 12.922 12.922 0 01-.418-.391 26.22 26.22 0 01-1.048-1.083 32.885 32.885 0 01-3.155-4.038C11.735 24.896 10 20.11 10 15.02 10 9.167 14.266 5 19.897 5h.206C25.733 5 30 9.167 30 15.02c0 5.09-1.734 9.876-4.615 14.218a32.885 32.885 0 01-3.155 4.038c-.378.413-.73.774-1.048 1.083-.194.188-.336.32-.418.391zM24 16a4 4 0 10-8 0 4 4 0 008 0z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </svg>
      </span>
    </div>
    <div
      className="c4 c5 balloon"
      overflow="hidden"
      width="100%"
    >
      <div
        className="c6 imageSet"
      >
        <div
          className="c7 gradient"
        >
          <div
            className="c8 text"
            fontWeight="title"
            size={28}
            type="white"
          >
            Romaine Lettuce
          </div>
        </div>
      </div>
      <div
        className="c9 c10 caption"
        fontWeight="inherit"
        size={18}
        title={true}
        type="#59636f"
      >
        Paloma Orchards
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Balloon Custom pin 1`] = `
.c3 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c3 .farmblocks-icon {
  display: block;
}

.c8 {
  font-family: Lato,sans-serif;
  font-size: 28px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
  text-align: left;
  font-weight: 600;
}

.c9 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: inherit;
}

.c4 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: hidden;
  padding: 0;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 30px;
  width: 30px;
  position: absolute;
  bottom: 0;
  left: -15px;
  color: black;
  -webkit-filter: drop-shadow(0 2px 4px rgba(0,0,0,0.24));
  filter: drop-shadow(0 2px 4px rgba(0,0,0,0.24));
}

.c5 {
  position: absolute;
  bottom: 38px;
  left: -33px;
  -webkit-transform-origin: bottom left;
  -ms-transform-origin: bottom left;
  transform-origin: bottom left;
  height: 260px;
  width: 260px;
  padding: 0;
  border-radius: 8px;
  border: none;
  box-shadow: 0 2px 16px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5 .caption {
  margin: 16px 8px;
}

.c10 {
  padding-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-image: url(https://picsum.photos/640?image=0);
  background-size: cover;
  background-position: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c7 {
  height: 147px;
  box-sizing: border-box;
  background: linear-gradient( 180deg,rgba(0,0,0,0) 0%,rgba(0,0,0,0.48) 100% );
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 24px;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="c2 pin open"
    >
      <span
        className="c3"
        color="currentColor"
        size="1em"
      >
        <svg
          aria-hidden={true}
          className="farmblocks-icon "
          height="1em"
          viewBox="4 4 32 32"
          width="1em"
        >
          <path
            d="M20.764 34.75a1 1 0 01-.661.25h-.206a1 1 0 01-.661-.25 12.922 12.922 0 01-.418-.391 26.22 26.22 0 01-1.048-1.083 32.885 32.885 0 01-3.155-4.038C11.735 24.896 10 20.11 10 15.02 10 9.167 14.266 5 19.897 5h.206C25.733 5 30 9.167 30 15.02c0 5.09-1.734 9.876-4.615 14.218a32.885 32.885 0 01-3.155 4.038c-.378.413-.73.774-1.048 1.083-.194.188-.336.32-.418.391zM24 16a4 4 0 10-8 0 4 4 0 008 0z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </svg>
      </span>
    </div>
    <div
      className="c4 c5 balloon"
      overflow="hidden"
      width="100%"
    >
      <div
        className="c6 imageSet"
      >
        <div
          className="c7 gradient"
        >
          <div
            className="c8 text"
            fontWeight="title"
            size={28}
            type="white"
          >
            Romaine Lettuce
          </div>
        </div>
      </div>
      <div
        className="c9 c10 caption"
        fontWeight="inherit"
        size={18}
        title={true}
        type="#59636f"
      >
        Paloma Orchards
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Balloon Default 1`] = `
.c3 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c3 .farmblocks-icon {
  display: block;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 40px;
  width: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: #f1c618;
  -webkit-filter: drop-shadow(0 2px 4px rgba(0,0,0,0.24));
  filter: drop-shadow(0 2px 4px rgba(0,0,0,0.24));
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="c2 pin "
    >
      <span
        className="c3"
        color="currentColor"
        size="1em"
      >
        <svg
          aria-hidden={true}
          className="farmblocks-icon "
          height="1em"
          viewBox="4 4 32 32"
          width="1em"
        >
          <path
            d="M20.764 34.75a1 1 0 01-.661.25h-.206a1 1 0 01-.661-.25 12.922 12.922 0 01-.418-.391 26.22 26.22 0 01-1.048-1.083 32.885 32.885 0 01-3.155-4.038C11.735 24.896 10 20.11 10 15.02 10 9.167 14.266 5 19.897 5h.206C25.733 5 30 9.167 30 15.02c0 5.09-1.734 9.876-4.615 14.218a32.885 32.885 0 01-3.155 4.038c-.378.413-.73.774-1.048 1.083-.194.188-.336.32-.418.391zM24 16a4 4 0 10-8 0 4 4 0 008 0z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Balloon Interactive 1`] = `
.c3 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c3 .farmblocks-icon {
  display: block;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 40px;
  width: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: FireBrick;
  -webkit-filter: drop-shadow(0 2px 4px rgba(0,0,0,0.24));
  filter: drop-shadow(0 2px 4px rgba(0,0,0,0.24));
  font-size: 30px;
  height: 40px;
  box-sizing: border-box;
  cursor: pointer;
  bottom: -20px;
  text-shadow: none;
  color: FireBrick;
  background-color: white;
  border-radius: 50%;
  border: 1px solid rgba(0,0,0,0.16);
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
}

.c2:active {
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c2.open {
  color: white;
  background-color: FireBrick;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="c2 pin "
      onClick={[Function]}
    >
      <span
        className="c3"
        color="currentColor"
        size="1em"
      >
        <svg
          aria-hidden={true}
          className="farmblocks-icon "
          height="1em"
          viewBox="4 4 32 32"
          width="1em"
        >
          <path
            d="M20.764 34.75a1 1 0 01-.661.25h-.206a1 1 0 01-.661-.25 12.922 12.922 0 01-.418-.391 26.22 26.22 0 01-1.048-1.083 32.885 32.885 0 01-3.155-4.038C11.735 24.896 10 20.11 10 15.02 10 9.167 14.266 5 19.897 5h.206C25.733 5 30 9.167 30 15.02c0 5.09-1.734 9.876-4.615 14.218a32.885 32.885 0 01-3.155 4.038c-.378.413-.73.774-1.048 1.083-.194.188-.336.32-.418.391zM20 33.883l.103-.116V33h-.206v.767l.103.116zm.756-1.959c1.01-1.1 2.02-2.37 2.962-3.791C26.398 24.093 28 19.673 28 15.02 28 10.283 24.639 7 20.103 7h-.206C15.361 7 12 10.282 12 15.02c0 4.653 1.602 9.073 4.282 13.113a30.898 30.898 0 002.962 3.791c.268.293.522.557.756.791.234-.234.488-.498.756-.79zM23 16a3 3 0 10-6 0 3 3 0 006 0zm2 0a5 5 0 11-10 0 5 5 0 0110 0z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Balloon Interactive open 1`] = `
.c3 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c3 .farmblocks-icon {
  display: block;
}

.c8 {
  font-family: Lato,sans-serif;
  font-size: 28px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
  text-align: left;
  font-weight: 600;
}

.c9 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: inherit;
}

.c11 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: rgba(0,0,0,0.32);
  text-align: left;
  font-weight: 600;
}

.c4 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: hidden;
  padding: 0;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 40px;
  width: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: FireBrick;
  -webkit-filter: drop-shadow(0 2px 4px rgba(0,0,0,0.24));
  filter: drop-shadow(0 2px 4px rgba(0,0,0,0.24));
  font-size: 30px;
  height: 40px;
  box-sizing: border-box;
  cursor: pointer;
  bottom: -20px;
  text-shadow: none;
  color: FireBrick;
  background-color: white;
  border-radius: 50%;
  border: 1px solid rgba(0,0,0,0.16);
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
}

.c2:active {
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c2.open {
  color: white;
  background-color: FireBrick;
}

.c5 {
  position: absolute;
  bottom: 48px;
  left: -33px;
  -webkit-transform-origin: bottom left;
  -ms-transform-origin: bottom left;
  transform-origin: bottom left;
  height: 260px;
  width: 260px;
  padding: 0;
  border-radius: 8px;
  border: none;
  box-shadow: 0 2px 16px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  bottom: 28px;
  color: rgba(0,0,0,0.16);
}

.c5 .caption {
  margin: 16px 8px;
}

.c5:active {
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
  color: rgba(0,0,0,0.32);
}

.c10 {
  padding-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-image: url(https://picsum.photos/640?image=0);
  background-size: cover;
  background-position: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c7 {
  height: 147px;
  box-sizing: border-box;
  background: linear-gradient( 180deg,rgba(0,0,0,0) 0%,rgba(0,0,0,0.48) 100% );
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 24px;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="c2 pin open"
      onClick={[Function]}
    >
      <span
        className="c3"
        color="currentColor"
        size="1em"
      >
        <svg
          aria-hidden={true}
          className="farmblocks-icon "
          height="1em"
          viewBox="4 4 32 32"
          width="1em"
        >
          <path
            d="M20.764 34.75a1 1 0 01-.661.25h-.206a1 1 0 01-.661-.25 12.922 12.922 0 01-.418-.391 26.22 26.22 0 01-1.048-1.083 32.885 32.885 0 01-3.155-4.038C11.735 24.896 10 20.11 10 15.02 10 9.167 14.266 5 19.897 5h.206C25.733 5 30 9.167 30 15.02c0 5.09-1.734 9.876-4.615 14.218a32.885 32.885 0 01-3.155 4.038c-.378.413-.73.774-1.048 1.083-.194.188-.336.32-.418.391zM20 33.883l.103-.116V33h-.206v.767l.103.116zm.756-1.959c1.01-1.1 2.02-2.37 2.962-3.791C26.398 24.093 28 19.673 28 15.02 28 10.283 24.639 7 20.103 7h-.206C15.361 7 12 10.282 12 15.02c0 4.653 1.602 9.073 4.282 13.113a30.898 30.898 0 002.962 3.791c.268.293.522.557.756.791.234-.234.488-.498.756-.79zM23 16a3 3 0 10-6 0 3 3 0 006 0zm2 0a5 5 0 11-10 0 5 5 0 0110 0z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </svg>
      </span>
    </div>
    <div
      className="c4 c5 balloon"
      onClick={[Function]}
      overflow="hidden"
      width="100%"
    >
      <div
        className="c6 imageSet"
      >
        <div
          className="c7 gradient"
        >
          <div
            className="c8 text"
            fontWeight="title"
            size={28}
            type="white"
          >
            Romaine Lettuce
          </div>
        </div>
      </div>
      <div
        className="c9 c10 caption"
        fontWeight="inherit"
        size={18}
        title={true}
        type="#59636f"
      >
        Paloma Orchards
        <div
          className="c11 text"
          fontWeight="title"
          size={18}
          type="rgba(0, 0, 0, 0.32)"
        >
          <span
            className="c3"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height={24}
              viewBox="2 2 20 20"
              width={24}
            >
              <path
                d="M12 12.586l3.293-3.293a1 1 0 011.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L12 12.586z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Balloon Interactive toggle 1`] = `
.c3 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c3 .farmblocks-icon {
  display: block;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 40px;
  width: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: DarkBlue;
  -webkit-filter: drop-shadow(0 2px 4px rgba(0,0,0,0.24));
  filter: drop-shadow(0 2px 4px rgba(0,0,0,0.24));
  -webkit-transition: -webkit-transform 0.3s,color 0.3s,background-color 0.3s;
  -webkit-transition: transform 0.3s,color 0.3s,background-color 0.3s;
  transition: transform 0.3s,color 0.3s,background-color 0.3s;
  font-size: 30px;
  height: 40px;
  box-sizing: border-box;
  cursor: pointer;
  bottom: -20px;
  text-shadow: none;
  color: DarkBlue;
  background-color: white;
  border-radius: 50%;
  border: 1px solid rgba(0,0,0,0.16);
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
}

.c2:active {
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c2.open {
  color: white;
  background-color: DodgerBlue;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="c2 pin "
      onClick={[Function]}
    >
      <span
        className="c3"
        color="currentColor"
        size="1em"
      >
        <svg
          aria-hidden={true}
          className="farmblocks-icon "
          height="1em"
          viewBox="4 4 32 32"
          width="1em"
        >
          <path
            d="M20.764 34.75a1 1 0 01-.661.25h-.206a1 1 0 01-.661-.25 12.922 12.922 0 01-.418-.391 26.22 26.22 0 01-1.048-1.083 32.885 32.885 0 01-3.155-4.038C11.735 24.896 10 20.11 10 15.02 10 9.167 14.266 5 19.897 5h.206C25.733 5 30 9.167 30 15.02c0 5.09-1.734 9.876-4.615 14.218a32.885 32.885 0 01-3.155 4.038c-.378.413-.73.774-1.048 1.083-.194.188-.336.32-.418.391zM20 33.883l.103-.116V33h-.206v.767l.103.116zm.756-1.959c1.01-1.1 2.02-2.37 2.962-3.791C26.398 24.093 28 19.673 28 15.02 28 10.283 24.639 7 20.103 7h-.206C15.361 7 12 10.282 12 15.02c0 4.653 1.602 9.073 4.282 13.113a30.898 30.898 0 002.962 3.791c.268.293.522.557.756.791.234-.234.488-.498.756-.79zM23 16a3 3 0 10-6 0 3 3 0 006 0zm2 0a5 5 0 11-10 0 5 5 0 0110 0z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Balloon Open Balloon 1`] = `
.c3 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c3 .farmblocks-icon {
  display: block;
}

.c8 {
  font-family: Lato,sans-serif;
  font-size: 28px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
  text-align: left;
  font-weight: 600;
}

.c9 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: inherit;
}

.c4 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: hidden;
  padding: 0;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 40px;
  width: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: #f1c618;
  -webkit-filter: drop-shadow(0 2px 4px rgba(0,0,0,0.24));
  filter: drop-shadow(0 2px 4px rgba(0,0,0,0.24));
}

.c5 {
  position: absolute;
  bottom: 48px;
  left: -33px;
  -webkit-transform-origin: bottom left;
  -ms-transform-origin: bottom left;
  transform-origin: bottom left;
  height: 260px;
  width: 260px;
  padding: 0;
  border-radius: 8px;
  border: none;
  box-shadow: 0 2px 16px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5 .caption {
  margin: 16px 8px;
}

.c10 {
  padding-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-image: url(https://picsum.photos/640?image=0);
  background-size: cover;
  background-position: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c7 {
  height: 147px;
  box-sizing: border-box;
  background: linear-gradient( 180deg,rgba(0,0,0,0) 0%,rgba(0,0,0,0.48) 100% );
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 24px;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="c2 pin open"
    >
      <span
        className="c3"
        color="currentColor"
        size="1em"
      >
        <svg
          aria-hidden={true}
          className="farmblocks-icon "
          height="1em"
          viewBox="4 4 32 32"
          width="1em"
        >
          <path
            d="M20.764 34.75a1 1 0 01-.661.25h-.206a1 1 0 01-.661-.25 12.922 12.922 0 01-.418-.391 26.22 26.22 0 01-1.048-1.083 32.885 32.885 0 01-3.155-4.038C11.735 24.896 10 20.11 10 15.02 10 9.167 14.266 5 19.897 5h.206C25.733 5 30 9.167 30 15.02c0 5.09-1.734 9.876-4.615 14.218a32.885 32.885 0 01-3.155 4.038c-.378.413-.73.774-1.048 1.083-.194.188-.336.32-.418.391zM24 16a4 4 0 10-8 0 4 4 0 008 0z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </svg>
      </span>
    </div>
    <div
      className="c4 c5 balloon"
      overflow="hidden"
      width="100%"
    >
      <div
        className="c6 imageSet"
      >
        <div
          className="c7 gradient"
        >
          <div
            className="c8 text"
            fontWeight="title"
            size={28}
            type="white"
          >
            Romaine Lettuce
          </div>
        </div>
      </div>
      <div
        className="c9 c10 caption"
        fontWeight="inherit"
        size={18}
        title={true}
        type="#59636f"
      >
        Paloma Orchards
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Balloon Open Balloon at Right 1`] = `
.c3 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c3 .farmblocks-icon {
  display: block;
}

.c8 {
  font-family: Lato,sans-serif;
  font-size: 28px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
  text-align: left;
  font-weight: 600;
}

.c9 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: inherit;
}

.c4 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: hidden;
  padding: 0;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 40px;
  width: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: #f1c618;
  -webkit-filter: drop-shadow(0 2px 4px rgba(0,0,0,0.24));
  filter: drop-shadow(0 2px 4px rgba(0,0,0,0.24));
}

.c5 {
  position: absolute;
  bottom: 48px;
  -webkit-transform-origin: bottom right;
  -ms-transform-origin: bottom right;
  transform-origin: bottom right;
  right: -33px;
  height: 260px;
  width: 260px;
  padding: 0;
  border-radius: 8px;
  border: none;
  box-shadow: 0 2px 16px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5 .caption {
  margin: 16px 8px;
}

.c10 {
  padding-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-image: url(https://picsum.photos/640?image=0);
  background-size: cover;
  background-position: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c7 {
  height: 147px;
  box-sizing: border-box;
  background: linear-gradient( 180deg,rgba(0,0,0,0) 0%,rgba(0,0,0,0.48) 100% );
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 24px;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="c2 pin open"
    >
      <span
        className="c3"
        color="currentColor"
        size="1em"
      >
        <svg
          aria-hidden={true}
          className="farmblocks-icon "
          height="1em"
          viewBox="4 4 32 32"
          width="1em"
        >
          <path
            d="M20.764 34.75a1 1 0 01-.661.25h-.206a1 1 0 01-.661-.25 12.922 12.922 0 01-.418-.391 26.22 26.22 0 01-1.048-1.083 32.885 32.885 0 01-3.155-4.038C11.735 24.896 10 20.11 10 15.02 10 9.167 14.266 5 19.897 5h.206C25.733 5 30 9.167 30 15.02c0 5.09-1.734 9.876-4.615 14.218a32.885 32.885 0 01-3.155 4.038c-.378.413-.73.774-1.048 1.083-.194.188-.336.32-.418.391zM24 16a4 4 0 10-8 0 4 4 0 008 0z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </svg>
      </span>
    </div>
    <div
      className="c4 c5 balloon"
      overflow="hidden"
      width="100%"
    >
      <div
        className="c6 imageSet"
      >
        <div
          className="c7 gradient"
        >
          <div
            className="c8 text"
            fontWeight="title"
            size={28}
            type="white"
          >
            Romaine Lettuce
          </div>
        </div>
      </div>
      <div
        className="c9 c10 caption"
        fontWeight="inherit"
        size={18}
        title={true}
        type="#59636f"
      >
        Paloma Orchards
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Balloon Single Image 1`] = `
.c3 {
  box-sizing: border-box;
  border-radius: 8px;
  object-fit: cover;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c4 {
  background-color: white;
  position: absolute;
  bottom: 16px;
  left: -92px;
  border-radius: 8px;
  box-shadow: 0 2px 16px 0 rgba(0,0,0,0.16);
}

.c2 {
  width: 16px;
  height: 16px;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 50%;
  position: absolute;
  bottom: -8px;
  left: -8px;
  background-color: #f1c618;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div>
      <div
        className="c2 image single"
        src="https://picsum.photos/180?image=0"
      />
      <img
        alt=""
        className="c3 c4 image single"
        height={184}
        size={184}
        src="https://picsum.photos/180?image=0"
        width={184}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Balloon custom border radius 1`] = `
.c3 {
  box-sizing: border-box;
  border-radius: 50%;
  object-fit: cover;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c4 {
  background-color: white;
  position: absolute;
  bottom: 16px;
  left: -92px;
  border-radius: 50%;
  box-shadow: 0 2px 16px 0 rgba(0,0,0,0.16);
}

.c2 {
  width: 16px;
  height: 16px;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 50%;
  position: absolute;
  bottom: -8px;
  left: -8px;
  background-color: #f1c618;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div>
      <div
        className="c2 image single"
        src="https://picsum.photos/180?image=0"
      />
      <img
        alt=""
        className="c3 c4 image single"
        height={184}
        size={184}
        src="https://picsum.photos/180?image=0"
        width={184}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Balloon custom sizes 1`] = `
.c3 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c3 .farmblocks-icon {
  display: block;
}

.c8 {
  font-family: Lato,sans-serif;
  font-size: 30px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
  text-align: left;
  font-weight: 600;
}

.c9 {
  font-family: Lato,sans-serif;
  font-size: 30px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: inherit;
}

.c4 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: hidden;
  padding: 0;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 40px;
  width: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: #f1c618;
  -webkit-filter: drop-shadow(0 2px 4px rgba(0,0,0,0.24));
  filter: drop-shadow(0 2px 4px rgba(0,0,0,0.24));
}

.c5 {
  position: absolute;
  bottom: 48px;
  left: -33px;
  -webkit-transform-origin: bottom left;
  -ms-transform-origin: bottom left;
  transform-origin: bottom left;
  height: 350px;
  width: 350px;
  padding: 0;
  border-radius: 8px;
  border: none;
  box-shadow: 0 2px 16px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5 .caption {
  margin: 16px 8px;
}

.c10 {
  padding-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-image: url(https://picsum.photos/640?image=0);
  background-size: cover;
  background-position: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c7 {
  height: 147px;
  box-sizing: border-box;
  background: linear-gradient( 180deg,rgba(0,0,0,0) 0%,rgba(0,0,0,0.48) 100% );
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 24px;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="c2 pin open"
    >
      <span
        className="c3"
        color="currentColor"
        size="1em"
      >
        <svg
          aria-hidden={true}
          className="farmblocks-icon "
          height="1em"
          viewBox="4 4 32 32"
          width="1em"
        >
          <path
            d="M20.764 34.75a1 1 0 01-.661.25h-.206a1 1 0 01-.661-.25 12.922 12.922 0 01-.418-.391 26.22 26.22 0 01-1.048-1.083 32.885 32.885 0 01-3.155-4.038C11.735 24.896 10 20.11 10 15.02 10 9.167 14.266 5 19.897 5h.206C25.733 5 30 9.167 30 15.02c0 5.09-1.734 9.876-4.615 14.218a32.885 32.885 0 01-3.155 4.038c-.378.413-.73.774-1.048 1.083-.194.188-.336.32-.418.391zM24 16a4 4 0 10-8 0 4 4 0 008 0z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </svg>
      </span>
    </div>
    <div
      className="c4 c5 balloon"
      overflow="hidden"
      width="100%"
    >
      <div
        className="c6 imageSet"
      >
        <div
          className="c7 gradient"
        >
          <div
            className="c8 text"
            fontWeight="title"
            size={30}
            type="white"
          >
            Romaine Lettuce
          </div>
        </div>
      </div>
      <div
        className="c9 c10 caption"
        fontWeight="inherit"
        size={30}
        title={true}
        type="#59636f"
      >
        Paloma Orchards
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Balloon extended style 1`] = `
.c4 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c4 .farmblocks-icon {
  display: block;
}

.c9 {
  font-family: Lato,sans-serif;
  font-size: 28px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
  text-align: left;
  font-weight: 600;
}

.c10 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: inherit;
}

.c5 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: hidden;
  padding: 0;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 40px;
  width: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: #f1c618;
  -webkit-filter: drop-shadow(0 2px 4px rgba(0,0,0,0.24));
  filter: drop-shadow(0 2px 4px rgba(0,0,0,0.24));
}

.c6 {
  position: absolute;
  bottom: 48px;
  left: -33px;
  -webkit-transform-origin: bottom left;
  -ms-transform-origin: bottom left;
  transform-origin: bottom left;
  height: 260px;
  width: 260px;
  padding: 0;
  border-radius: 8px;
  border: none;
  box-shadow: 0 2px 16px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6 .caption {
  margin: 16px 8px;
}

.c11 {
  padding-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-image: url(https://picsum.photos/640?image=0);
  background-size: cover;
  background-position: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c8 {
  height: 147px;
  box-sizing: border-box;
  background: linear-gradient( 180deg,rgba(0,0,0,0) 0%,rgba(0,0,0,0.48) 100% );
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 24px;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

.c2 .pin {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c2 .caption {
  border: solid 1px burlywood;
}

.c2 .imageSet .gradient {
  background: linear-gradient( 180deg,rgba(0,255,0,0.2) 0%,rgba(255,0,200,0.48) 100% );
}

.c2 .imageSet .text {
  color: lime;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="c3 pin open"
    >
      <span
        className="c4"
        color="currentColor"
        size="1em"
      >
        <svg
          aria-hidden={true}
          className="farmblocks-icon "
          height="1em"
          viewBox="4 4 32 32"
          width="1em"
        >
          <path
            d="M20.764 34.75a1 1 0 01-.661.25h-.206a1 1 0 01-.661-.25 12.922 12.922 0 01-.418-.391 26.22 26.22 0 01-1.048-1.083 32.885 32.885 0 01-3.155-4.038C11.735 24.896 10 20.11 10 15.02 10 9.167 14.266 5 19.897 5h.206C25.733 5 30 9.167 30 15.02c0 5.09-1.734 9.876-4.615 14.218a32.885 32.885 0 01-3.155 4.038c-.378.413-.73.774-1.048 1.083-.194.188-.336.32-.418.391zM24 16a4 4 0 10-8 0 4 4 0 008 0z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </svg>
      </span>
    </div>
    <div
      className="c5 c6 balloon"
      overflow="hidden"
      width="100%"
    >
      <div
        className="c7 imageSet"
      >
        <div
          className="c8 gradient"
        >
          <div
            className="c9 text"
            fontWeight="title"
            size={28}
            type="white"
          >
            Romaine Lettuce
          </div>
        </div>
      </div>
      <div
        className="c10 c11 caption"
        fontWeight="inherit"
        size={18}
        title={true}
        type="#59636f"
      >
        Paloma Orchards
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Balloon imageSet without name 1`] = `
.c3 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c3 .farmblocks-icon {
  display: block;
}

.c7 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: inherit;
}

.c4 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: hidden;
  padding: 0;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 40px;
  width: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: #f1c618;
  -webkit-filter: drop-shadow(0 2px 4px rgba(0,0,0,0.24));
  filter: drop-shadow(0 2px 4px rgba(0,0,0,0.24));
}

.c5 {
  position: absolute;
  bottom: 48px;
  left: -33px;
  -webkit-transform-origin: bottom left;
  -ms-transform-origin: bottom left;
  transform-origin: bottom left;
  height: 260px;
  width: 260px;
  padding: 0;
  border-radius: 8px;
  border: none;
  box-shadow: 0 2px 16px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5 .caption {
  margin: 16px 8px;
}

.c8 {
  padding-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-image: url(https://picsum.photos/640?image=0);
  background-size: cover;
  background-position: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="c2 pin open"
    >
      <span
        className="c3"
        color="currentColor"
        size="1em"
      >
        <svg
          aria-hidden={true}
          className="farmblocks-icon "
          height="1em"
          viewBox="4 4 32 32"
          width="1em"
        >
          <path
            d="M20.764 34.75a1 1 0 01-.661.25h-.206a1 1 0 01-.661-.25 12.922 12.922 0 01-.418-.391 26.22 26.22 0 01-1.048-1.083 32.885 32.885 0 01-3.155-4.038C11.735 24.896 10 20.11 10 15.02 10 9.167 14.266 5 19.897 5h.206C25.733 5 30 9.167 30 15.02c0 5.09-1.734 9.876-4.615 14.218a32.885 32.885 0 01-3.155 4.038c-.378.413-.73.774-1.048 1.083-.194.188-.336.32-.418.391zM24 16a4 4 0 10-8 0 4 4 0 008 0z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </svg>
      </span>
    </div>
    <div
      className="c4 c5 balloon"
      overflow="hidden"
      width="100%"
    >
      <div
        className="c6 imageSet"
      />
      <div
        className="c7 c8 caption"
        fontWeight="inherit"
        size={18}
        title={true}
        type="#59636f"
      >
        Paloma Orchards
      </div>
    </div>
  </div>
</div>
`;
